# kafka_kt_client_sample

./: BUILD.bazel  KafkaApp.kt  MODULE.bazel
