bazel_dep(name = "rules_kotlin", version = "1.9.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "io.github.nomisrev:kotlin-kafka:0.3.1",
        "io.arrow-kt:suspendapp:0.4.0",
        "org.apache.kafka:kafka-streams:3.6.1",
    ],
    fetch_sources = True,
)


use_repo(
    maven,
    "maven",
)